# E-skeleton-graphql

./: docker-compose.yml  package-lock.json  package.json
Node/: package.json  startServer.sh
Node/server/: app.js
Rust/: Cargo.toml
Rust/migrations/2022-01-20-114325_articles/: up.sql
Rust/migrations/2022-01-21-163056_chronos/: up.sql
Rust/src/: data.rs  endpoints.rs  graphql.rs  main.rs  models.rs  schema.rs  utils.rs
Rust/src/graphql/: base.rs  mod.rs  punch.rs  user.rs
Rust/src/models/: punch.rs  user.rs
Rust/src/operations/: punches.rs  users.rs
Rust/src/schema/: graphql_schema.rs  health.rs  mod.rs
Rust/src/server/: mod.rs  routes.rs
Rust/src/utils/: mod.rs  models.rs
server/: app.js  app.rb
server/graphql/: resolvers.js  schema.js
server/mongoDB/: userModel.js
