[package]
name = "E-skeleton-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Loggin
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Async
tokio = { version = "1.15.0", features = ["full"] }

# Web
warp = "0.3.1"

# Serialization
serde_json = "1.0"

#graphql
async-graphql = "3.0.17"
async-graphql-warp = "3.0.17"